--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: GoDotGov
 description: Public service with and by the people.
 #baseurl: ""
-url: "http://godotgov.govfresh.com/"
+url: "https://godotgov.govfresh.com/"
 
 title: Go DotGov
 
