--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # General
 title: GoDotGov
-description: Public service with and by the people.
+description: "All U.S. government websites should end in .gov."
 #baseurl: ""
 #url: """
 
