--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,8 @@
 # General
-title: GoDotGov
+title: Go .gov
 description: "All U.S. government websites should end in .gov."
 #baseurl: ""
 #url: """
-
-title: GoDotGov
 
 # Build settings
 theme: minima
